infra/k8s-dev/ingress-srv.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: vend.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /api/users/?(.*)
            backend:
              serviceName: user-srv
              servicePort: 3000
